--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<p> Favorite Arist </p>
 		    <h5> Phora </h5>
 		<p> 
+			<img src= http://cache.emirates247.com/polopoly_fs/1.607608.1452080993!/image/image.jpg />	
+
+    <a href= www.google.com><img src= https://pixabay.com/static/uploads/photo/2014/02/02/07/55/dubai-256585_960_720.jpg /></a>		
+    <a href= http://cache-graphicslib.viator.com/graphicslib/thumbs360x240/7160/SITours/dolphin-experience-at-atlantis-the-palm-in-dubai-in-dubai-183797.jpg ></a>
+
 		
 	</body>
 </html>
