--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	</head>
 	<body>
 	<h1> Pam Pam </h1>
+	<pstyle="color: violet; font-size:16px"> 
+ my instagram is @thenamespamela 
     
 			<img src= http://cache.emirates247.com/polopoly_fs/1.607608.1452080993!/image/image.jpg />	
 
