--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 	<h1> Pam Pam </h1>
-	<p style="color: violet; font-size:16px"> 
- my instagram is @thenamespamela 
+	<p style="color: violet; font-size:16px">  my instagram is @thenamespamela </p>
+ 
     
 			<img src= http://cache.emirates247.com/polopoly_fs/1.607608.1452080993!/image/image.jpg />	
 
