--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<body>
 	<h1> Pam Pam </h1>
 <h5> 	<p style="color: violet; font-size:16px">  my instagram is @thenamespamela </p> </h5>
+<p> i find making my own website.. <h3> EXCITING <H3> </H3></h3> </p>
+
  
     
 			<img src= http://cache.emirates247.com/polopoly_fs/1.607608.1452080993!/image/image.jpg />	
