--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 	<h1> Pam Pam </h1>
 <h5> 	<p style="color: violet; font-size:16px">  my instagram is @thenamespamela </p> </h5>
-<p> i find making my own website.. <h3> EXCITING <H3> </H3></h3> </p>
+<p> i finally making my own website.. <h3> EXCITING <H3> </H3></h3> </p>
 
  
     
