--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<body>
 	<h1> Pam Pam </h1>
 <h5> 	<p style="color: violet; font-size:16px">  my instagram is @thenamespamela </p> </h5>
-<p> i finally making my own website.. <h3> EXCITING <H3> </H3></h3> </p>
+<p> i'm finally making my own website.. <h3>  SO EXCITING <H3> </H3></h3> </p>
+<h4> I always wanted to go to Dubai! It looks very nice over there </h4>
 
  
     
