--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html> 
 
 	<head>
 		<title>
-			Headings & Paragraphs
+			Welcome to my page 
 		</title>
 		
 	</head>
 	<body>
-	<h1> Pam Pam </h1>
+	<h1> Pam Pam </h1> 
 <h5> 	<p style="color: violet; font-size:16px">  my instagram is @thenamespamela </p> </h5>
-<p> i'm finally making my own website.. <h3>  SO EXCITING <H3> </H3></h3> </p>
+                                  <p> i'm finally making my own website.. <h3>  SO EXCITING <H3> </H3></h3> </p>
 <h4> I always wanted to go to Dubai! It looks very nice over there </h4>
 
  
@@ -19,7 +19,9 @@
 
     <a href= www.google.com><img src= https://pixabay.com/static/uploads/photo/2014/02/02/07/55/dubai-256585_960_720.jpg /></a>		
     <a href= http://cache-graphicslib.viator.com/graphicslib/thumbs360x240/7160/SITours/dolphin-experience-at-atlantis-the-palm-in-dubai-in-dubai-183797.jpg ></a>
-
-		
+       I love to read, however I can never find a good book to read.
+       <img src= https://images.contentreserve.com/ImageType-400/0887-1/9B5/19A/45/%7B9B519A45-FC78-4123-BDDA-2B1551086809%7DImg400.jpg />
+       <p> i want to read this book. It seems very interesting </p>
+	<a href img src= http://cache-graphicslib.viator.com/graphicslib/thumbs360x240/7160/SITours/dolphin-experience-at-atlantis-the-palm-in-dubai-in-dubai-183797.jpg	
 	</body>
 </html>
