--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <a href= www.google.com><img src= https://pixabay.com/static/uploads/photo/2014/02/02/07/55/dubai-256585_960_720.jpg /></a>		
     <a href= http://cache-graphicslib.viator.com/graphicslib/thumbs360x240/7160/SITours/dolphin-experience-at-atlantis-the-palm-in-dubai-in-dubai-183797.jpg ></a>
-       I love to read, however I can never find a good book to read.
+   <h4> <p>  I love to read, however I can never find a good book to read. </p> </h4>
        <img src= https://images.contentreserve.com/ImageType-400/0887-1/9B5/19A/45/%7B9B519A45-FC78-4123-BDDA-2B1551086809%7DImg400.jpg />
-       <p> i want to read this book. It seems very interesting </p>
+   <h4>    <p> i want to read this book. It seems very interesting </p> </h4>
 	<a href img src= http://cache-graphicslib.viator.com/graphicslib/thumbs360x240/7160/SITours/dolphin-experience-at-atlantis-the-palm-in-dubai-in-dubai-183797.jpg	
 	</body>
 </html>
